--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -282,6 +282,8 @@ insert_inward = insert into inward(\
                 (select id from inward_return_reasons where return_reason=?),?,?,?,?,\
                 (select id from languages where language=?))
 
+insert_payment = insert into payment(inwardID, subscriptionID)values(?,?)
+
 get_last_inward = SELECT inwardNumber,inwardCreationDate FROM inward ORDER BY id DESC LIMIT 1
 
 get_inward_by_number = select t1.inwardNumber\
@@ -314,6 +316,7 @@ get_inward_by_number = select t1.inwardNumber\
                       ,DATE_FORMAT(t1.returnDate,'%d/%m/%Y') as returnDate \
                       ,t1.completed \
                       ,t11.language \
+                      ,t12.subscriptionID \
                 from inward t1 \
                 left join countries t2 on t1.country = t2.id \
                 left join states t3 on t1.state = t3.id \
@@ -325,6 +328,7 @@ get_inward_by_number = select t1.inwardNumber\
                 left join currency t8 on t1.currency = t8.id \
                 left join inward_return_reasons t9 on t1.chequeDDReturnReason = t9.id \
                 left join languages t11 on t1.language = t11.id \
+                left join payment t12 on t1.id=t12.inwardID \
                 where t1.inwardNumber = ?
 
 update_inward = update inward set \
@@ -337,6 +341,8 @@ update_inward = update inward set \
                     chequeDDReturnReasonOther = ?, receiptNumber = ?, ackDate = ?, remarks = ?, \
                     language = (select id from languages where language = ?) \
                     where inwardNumber = ?
+
+update_payment_info = update payment set subscriptionID=? where inwardID=(select id from inward where inwardNumber=?)
 
 # The where/and clause is formed dynamically in the searchInward in IAS.Model.inward.java
 search_inwards = select t1.id as inwardID, inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
@@ -443,43 +449,69 @@ search_subscriber = select subscriberNumber, subscriberName, department, t3.coun
 #--------------------------------------------------------------------------
 # Subscription
 #--------------------------------------------------------------------------
-get_subscription_for_subscriber =     select  t5.id \
-                                            , t5.inwardNumber \
-                                            , DATE_FORMAT(t5.subscriptionDate,'%d/%m/%Y') as subscriptionDate \
-                                            , t5.amount \
-                                            , sum(copies * t7.rate) as subscriptionTotal \
-                                            , (sum(copies * t7.rate) - t5.amount) as balance \
-                                            , t5.currency \
-                                    from  subscriptiondetails t6 \
-                                        , subscription_rates t7 \
-                                        , ( \
-                                            select t4.subscriberName \
-                                                    , t1.id \
-                                                    , t2.inwardNumber \
-                                                    , t2.amount \
-                                                    , t3.currency \
-                                                    , t1.subscriptionDate \
-                                            from subscription t1 left join inward t2 on t1.inwardID = t2.id \
-                                            left join currency t3 on t2.currency = t3.id \
-                                            left join subscriber t4 on t1.subscriberID = t4.id \
-                                            where t4.subscriberNumber = ? \
-                                            ) as t5 \
-                                    where t5.id=t6.subscriptionID \
-                                        and t6.journalPriceGroupID = t7.id \
-                                        and t6.active=true \
-                                        group by t5.id, t5.inwardNumber, t5.amount \
-                                        order by t5.id desc \
+get_subscription_for_subscriber =   select  t8.id, \
+                                    t8.inwardNumber, \
+                                    t8.subscriptionDate, \
+                                    (t8.amount + sum(COALESCE(t10.amount,0))) as amount, \
+                                    t8.subscriptionTotal, \
+                                    (t8.balance - sum(COALESCE(t10.amount,0))) as balance, \
+                                    t8.currency \
+                                    from \
+                                    ( \
+                                        select  t5.id \
+                                                , t5.inwardNumber \
+                                                , DATE_FORMAT(t5.subscriptionDate,'%d/%m/%Y') as subscriptionDate \
+                                                , t5.amount \
+                                                , sum(copies * t7.rate) as subscriptionTotal \
+                                                , (sum(copies * t7.rate) - t5.amount) as balance \
+                                                , t5.currency \
+                                        from  subscriptiondetails t6 \
+                                            , subscription_rates t7 \
+                                            , ( \
+                                                select t4.subscriberName \
+                                                        , t1.id \
+                                                        , t2.inwardNumber \
+                                                        , t2.amount \
+                                                        , t3.currency \
+                                                        , t1.subscriptionDate \
+                                                from subscription t1 left join inward t2 on t1.inwardID = t2.id \
+                                                left join currency t3 on t2.currency = t3.id \
+                                                left join subscriber t4 on t1.subscriberID = t4.id \
+                                                where t4.subscriberNumber = ? \
+                                                ) as t5 \
+                                        where t5.id=t6.subscriptionID \
+                                            and t6.journalPriceGroupID = t7.id \
+                                            and t6.active=true \
+                                            group by t5.id, t5.inwardNumber, t5.amount \
+                                            order by t5.id desc \
+                                    )\
+                                   t8 left join payment t9 on t8.id = t9.subscriptionID \
+                                   left join inward t10 on t9.inwardID=t10.id \
+                                   group by t8.id, t8.inwardNumber \
+                                   order by t8.id desc
 
 
-get_subscription_info_by_id =   select t1.id, t3.subscriberName, t2.inwardNumber \
-                                    , (sum(t5.rate * t4.copies) - t2.amount) as balance, sum(t5.rate * t4.copies)  as subscriptionTotal \
-                                    , t1.remarks, t2.amount, t3.subscriberNumber \
-                                from subscription t1, inward t2, subscriber t3, \
-                                     subscriptiondetails t4, subscription_rates t5 \
+get_subscription_info_by_id =   select  t1.id,\
+                                        t3.subscriberName,\
+                                        t2.inwardNumber,\
+                                        ((t5.rate * t4.copies) - t2.amount - sum(COALESCE(t7.amount,0))) as balance,\
+                                        (t5.rate * t4.copies)  as subscriptionTotal,\
+                                        t1.remarks,\
+                                        (t2.amount + sum(COALESCE(t7.amount,0))) as amount,\
+                                        t3.subscriberNumber \
+                                from  subscription t1,\
+                                    inward t2,\
+                                    subscriber t3,\
+                                    subscriptiondetails t4,\
+                                    subscription_rates t5,\
+                                    payment t6,\
+                                    inward t7 \
                                 where t1.inwardID = t2.id \
                                     and t1.subscriberID = t3.id \
                                     and t4.subscriptionID = t1.id \
                                     and t4.journalPriceGroupID = t5.id \
+                                    and t1.id=t6.subscriptionID \
+                                    and t6.inwardID = t7.id \
                                     and t4.active=true \
                                     and t1.id = ?
 
@@ -750,34 +782,85 @@ get_ml_id = select id from mailing_list where journalId = (select id from journa
 #--------------------------------------------------------------------------
 # Start Back Issue List
 #--------------------------------------------------------------------------
-subscribernumber = select subscriber.subscriberNumber from subscriber, back_issue_list, subscription, subscriptiondetails \
-                    where back_issue_list.subscriptiondetailId = subscriptiondetails.id and back_issue_list.bil_generated = ' ' \
-                    and subscriptiondetails.subscriptionID = subscription.id and subscription.subscriberID = subscriber.id
+subscribernumber =  select subscriber.subscriberNumber \
+                    from  subscriber,\
+                        back_issue_list,\
+                        subscription,\
+                        subscriptiondetails \
+                    where back_issue_list.subscription_detail_id = subscriptiondetails.id \
+                        and back_issue_list.sent_to_subscriber = false \
+                        and subscriptiondetails.subscriptionID = subscription.id \
+                        and subscription.subscriberID = subscriber.id \
+                    group by subscriber.subscriberNumber
 
-subscribernumberbil = select subscriber.subscriberNumber from subscriber, back_issue_list, subscription, subscriptiondetails \
-                    where back_issue_list.subscriptiondetailId = subscriptiondetails.id and back_issue_list.bil_generated = 'X' \
-                    and subscriptiondetails.subscriptionID = subscription.id and subscription.subscriberID = subscriber.id
+subscribernumberbil =   select subscriber.subscriberNumber \
+                        from  subscriber,\
+                            back_issue_list, \
+                            subscription, \
+                            subscriptiondetails \
+                        where back_issue_list.subscription_detail_id = subscriptiondetails.id \
+                            and back_issue_list.sent_to_subscriber = true \
+                            and subscriptiondetails.subscriptionID = subscription.id \
+                            and subscription.subscriberID = subscriber.id \
+                        group by subscriber.subscriberNumber
 
-generate_bil = select \
-                mailing_list.id, subscriber.id, subscription.id, subscriptiondetails.id, journals.id, \
-                journals.journalCode, subscriber_type.subtypecode, subscriber.subscriberNumber, subscriber.subscriberName, \
-                subscriber.department, subscriber.institution, subscriber.subscriberAddress, cities.city , districts.district, \
-                states.state, countries.country, subscriber.pincode, back_issue_list.copies, \
-                subscriptiondetails.startYear, subscriptiondetails.startMonth, subscriptiondetails.endYear, subscriptiondetails.endMonth, \
-                back_issue_list.issue, back_issue_list.month, back_issue_list.`year`, back_issue_list.Id \
-                FROM \
-                back_issue_list, mailing_list, subscriber, subscription, journals, journal_groups, subscriptiondetails, journal_group_contents, \
-                cities, states, countries, districts, subscriber_type \
-                where \
-                back_issue_list.`year` = mailing_list.`year` and back_issue_list.issue = mailing_list.issue \
-                and back_issue_list.issue = mailing_list.issue and back_issue_list.month = mailing_list.month \
-                and back_issue_list.bil_generated = ' ' and back_issue_list.subscriptiondetailId = subscriptiondetails.id \
-                and subscription.subscriberID = subscriber.id and subscriptiondetails.subscriptionID = subscription.id \
-                and journal_group_contents.journalGroupId = journal_groups.id and journal_group_contents.journalId = journals.id \
-                and subscriptiondetails.journalGroupID = journal_groups.id and subscriber.city = cities.id and subscriber.district = districts.id \
-                and subscriber.state = states.id and subscriber.country = countries.id and subscriber.subtype = subscriber_type.id \
-                and subscriptiondetails.active = '1' and subscriber.subscriberNumber = ?
-
+  
+generate_bil = select   mailing_list.id, \
+                        subscriber.id, \
+                        subscription.id,\
+                        subscriptiondetails.id, \
+			journals.id, \
+			journals.journalCode,\
+                        subscriber_type.subtypecode,\
+                        subscriber.subscriberNumber, \
+			subscriber.subscriberName,\
+                        subscriber.department, \
+			subscriber.institution, \
+			subscriber.subscriberAddress,\
+                        cities.city, \
+			districts.district, \
+			states.state,\
+                        countries.country,\
+                        subscriber.pincode,\
+                        back_issue_list.copies,\
+                        subscriptiondetails.startYear,\
+                        subscriptiondetails.startMonth,\
+                        subscriptiondetails.endYear,\
+                        subscriptiondetails.endMonth,\
+                        back_issue_list.issue_number,\
+                        back_issue_list.month,\
+                        back_issue_list.`year`,\
+                        back_issue_list.id \
+                FROM  back_issue_list,\
+                        mailing_list,\
+                        subscriber,\
+                        subscription,\
+                        journals,\
+                        journal_groups,\
+                        subscriptiondetails,\
+                        journal_group_contents,\
+                        cities,\
+                        states,\
+                        countries, \
+                        districts, \
+                        subscriber_type \
+                where back_issue_list.`year` = mailing_list.`year` \
+                        and back_issue_list.issue_number = mailing_list.issue \
+                        and back_issue_list.month = mailing_list.month \
+                        and back_issue_list.sent_to_subscriber = false \
+                        and back_issue_list.subscription_detail_id = subscriptiondetails.id \
+                        and subscription.subscriberID = subscriber.id \
+                        and subscriptiondetails.subscriptionID = subscription.id \
+                        and journal_group_contents.journalGroupId = journal_groups.id \
+                        and journal_group_contents.journalId = journals.id \
+                        and subscriptiondetails.journalGroupID = journal_groups.id \
+                        and subscriber.city = cities.id \
+                        and subscriber.district = districts.id \
+                        and subscriber.state = states.id \
+                        and subscriber.country = countries.id \
+                        and subscriber.subtype = subscriber_type.id \
+                        and subscriptiondetails.active = true \
+                        and subscriber.subscriberNumber = ?
 
 insert_mldtl_bil = insert into mailing_list_detail \
                     ( mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, journalCode, \
@@ -788,7 +871,7 @@ insert_mldtl_bil = insert into mailing_list_detail \
                     ( ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, \
                     ?, ?, ?, ? )
 
-update_bil = update back_issue_list SET bil_generated = 'x' WHERE Id = ?  
+update_bil = update back_issue_list SET sent_to_subscriber = true WHERE Id = ?  
 
 search_bil = select \
             mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
