--- a/web/WEB-INF/classes/jds_email.properties
+++ b/web/WEB-INF/classes/jds_email.properties
@@ -15,13 +15,20 @@
 
 # mail.smtp.host
 SMTP_HOST_NAME = smtp.gmail.com
+#ns1.ias.ac.in : 111.93.135.162
+#smtp.gmail.com
 
 # mail.smtp.user - The default user name to use when connecting to the mail server. Used if the mail.protocol.user property isn't set.
 SMTP_AUTH_USER = jds.adm.all@gmail.com
+#jds.adm.all@gmail.com
 SMTP_AUTH_PWD  = jds.adm.all
-PORTFORSSL = 465
+#jds.adm.all
+PORTFOR_TLS_STARTTLS = 587
 STARTTLS = true
-AUTH = true
+
+PORTFORSSL = 465
 SOCKET_FACTORY = javax.net.ssl.SSLSocketFactory
+
+AUTH = true
 mail.debug = true
 session.debug = true
